2009-06-14  Ulrich Drepper  <drepper@redhat.com>

	* po/sv.po: Update from translation team.

	[BZ #10229]
	* misc/sys/select.h (__NFDBITS): Expression should have type int.
	* sysdeps/x86_64/bits/select.h: Remove asm versions for __FD_SET,
	__FD_CLR, and __FD_ISSET.  gcc nowadays generates better code from
	the C version.

2009-06-12  Ulrich Drepper  <drepper@redhat.com>

	* Versions.def: Add GLIBC_2.11 for libpthread.

2009-06-11  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_send.c (send_dg): Remember we switched to
	single-request mode.

2009-06-09  Ulrich Drepper  <drepper@redhat.com>

	* dlfcn/dlfcn.h: Remove comma at end of enum.
	Patch by J.H.M. Dassen <rdassen@redhat.com>.

	* libio/fileops.c (_IO_new_file_fopen): Don't prematurely stop
	parsing mode string.

2009-06-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/rawmemchr.S: Minor optimization.

	* sysdeps/x86_64/multiarch/rawmemchr.S: New file.

	* sysdeps/x86_64/multiarch/strlen.S: New file.
	* sysdeps/x86_64/multiarch/ifunc-defines.sym: New file.
	* sysdeps/x86_64/multiarch/Makefile: Add rule to build ifunc-defines.h.
	* sysdeps/x86_64/multiarch/init-arch.h: Name structure with register
	content.

	* csu/elf-init.c: Only compile in IFUNC functionality if USE_MULTIARCH
	is defined.

2009-06-04  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/strlen.S: Minor optimizations.

2009-06-02  H.J. Lu  <hongjiu.lu@intel.com>

	* elf/Makefile (distribute): Add ifuncmain1.c, ifuncmain1pic.c,
	ifuncmain1vis.c, ifuncmain1vispic.c, ifuncmain1static.c,
	ifuncmain1staticpic.c, ifuncmain1picstatic.c, ifuncdep1.c,
	ifuncdep1pic.c, ifuncmod1.c, ifuncmain1pie.c, ifuncmain1vispie.c,
	ifuncmain2.c, ifuncmain2static.c, ifuncdep2.c,
	funcmain2pic.c, ifuncmain2picstatic.c, ifuncdep2pic.c,
	ifuncmain3.c, ifuncmod3.c,.
	ifuncmain4.c, ifuncmain4static.c, ifuncmain4picstatic.c.
	(tests-static): Add ifuncmain1static, ifuncmain1picstatic,
	ifuncmain2static, ifuncmain2picstatic, ifuncmain4static,